# langma_dashboard

./: .env.example  .gitignore  Process.md  README.md  git提交规范.md  main.py  pyproject.toml  settings.yaml  tmp.md
.github/: copilot-instructions.md
backend/: __init__.py  main.py
backend/api/: router.py
backend/config/: settings.py
backend/db/: base.py  models.py  session.py
backend/domain/: enums.py
backend/model_adapters/: __init__.py  persona_analysis.py
backend/parsers/: chat_parser.py
backend/schemas/: common.py  persona_analysis.py
backend/services/: analysis_service.py  bootstrap_service.py  boundary_agent_service.py  conversation_service.py  model_service.py  prompt_service.py  reference_kb_service.py
data/: e2e_real_analysis_1774947300.db  e2e_real_analysis_1774947356.db  e2e_real_analysis_chat_1774947551.db  e2e_real_analysis_chat_1774947802.db  e2e_real_analysis_reasoner_1774947955.db  lang_ma_dashboard.db
docs/api/: testcrawl_ui_integration.md  user_profiling_analysis.md
docs/tec_requirements/: user_profiling_analysis.md
frontend/: README.md  index.html  metadata.json  package-lock.json  vite.config.ts
frontend/src/: App.tsx  index.css
prompts/: prompt_for_user_profile.md
prompts/references/: example_wechat.csv  用户标签及推荐话术说明.md  用户痛点、高频节点、成交节点、流失节点分析.md
scripts/: start-dev-all.ps1
subprojects/testcrawl/: .env.example  .env.localtest.example  .gitignore  Dockerfile  README.md  docker-compose.yml  get.txt  getcj.txt  requirements.txt
tests/: conftest.py
tests/backend/: test_analysis_service.py  test_api_smoke.py  (+4 more)
(+152 files in other folders)
